Fixed links to other pages and files

--- a/content/pages/technology.html
+++ b/content/pages/technology.html
@@ -12,19 +12,19 @@
     <title>Technik | Kotmasters</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
-    <link rel="shortcut icon" href="/images/icon.ico" />
+    <link rel="shortcut icon" href="../../images/icon.ico" />
     <link rel="stylesheet" href="../../styles/css/home.css" />
   </head>
 
   <header>
     <a class="logo__font" href="/"
-      ><img class="logo" src="/images/logo.png" alt="logo" />Kotmasters</a
+      ><img class="logo" src="../../images/logo.png" alt="logo" />Kotmasters</a
     >
     <nav>
       <ul class="nav__links">
         <li><a href="">Services</a></li>
-        <li><a href="/content/pages/about.html">About</a></li>
-        <li><a href="/content/pages/projects.html">Projects</a></li>
+        <li><a href="../../content/pages/about.html">About</a></li>
+        <li><a href="../../content/pages/projects.html">Projects</a></li>
       </ul>
     </nav>
     <a class="cta" href="https://github.com/Staubtornado/kotmasters/discussions"
