--- a/content/legal/imprint.html
+++ b/content/legal/imprint.html
@@ -5,7 +5,7 @@
     
     <title>Kotmasters</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="shortcut icon" href="/images/icon.ico" />
+    <link rel="shortcut icon" href="../../images/icon.ico" />
     
         <meta
             name="description"
@@ -19,8 +19,8 @@
     <nav>
       <ul class="nav__links">
         <li><a href="">Services</a></li>
-        <li><a href="/content/pages/about.html">About</a></li>
-        <li><a href="/content/pages/projects.html">Projects</a></li>
+        <li><a href="../../content/pages/about.html">About</a></li>
+        <li><a href="../../content/pages/projects.html">Projects</a></li>
       </ul>
     </nav>
     <a class="cta" href="https://github.com/Staubtornado/kotmasters/discussions"><button>Contact</button></a>
