--- a/content/pages/about.html
+++ b/content/pages/about.html
@@ -11,17 +11,17 @@
     <title>About | Kotmasters</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="shortcut icon" href="../../images/icon.ico" />
+    <link rel="shortcut icon" href="/images/icon.ico" />
     <link rel="stylesheet" href="../../styles/css/about.css" />
   </head>
 
   <header>
-    <a class="logo__font" href="/"><img class="logo" src="../../images/logo.png" alt="logo" />Kotmasters</a>
+    <a class="logo__font" href="/"><img class="logo" src="/images/logo.png" alt="logo" />Kotmasters</a>
     <nav>
       <ul class="nav__links">
         <li><a href="">Services</a></li>
-        <li><a href="../../content/pages/about.html">About</a></li>
-        <li><a href="../../content/pages/projects.html">Projects</a></li>
+        <li><a href="/content/pages/about.html">About</a></li>
+        <li><a href="/content/pages/projects.html">Projects</a></li>
       </ul>
     </nav>
     <a class="cta" href="https://github.com/Staubtornado/kotmasters/discussions"><button>Contact</button></a>
@@ -56,7 +56,7 @@
         <img class="profile-image"src="https://i.pravatar.cc//125" alt="">
         <ul class="social-list">
           <li class="social-item">
-            <a class="social-link" href="#"></a><i class="fab fa-discord"></i></a>
+            <a class="social-link" href="#"></a><i class="fab fa-spotify"></i></a>
           </li>
           <li class="social-item">
             <a class="social-link" href="#"><i class="fab fa-github"></i></a>
@@ -67,10 +67,10 @@
         </ul>
       </div>
       <div class="profile-main">
-        <h2 class="profile-name">Hier Name</h2>
-        <p class="profile-position">King of Tech</p>
+        <h2 class="profile-name">Jannis Dickel aka. Daywalker</h2>
+        <p class="profile-position">Lead Frontenddeveloper</p>
         <p class="profile-body">
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi nisi consequatur quasi porro a vero perspiciatis asperiores in expedita dicta libero nemo pariatur placeat, at soluta voluptatem aliquam laboriosam cupiditate!
+        Cooler Typ und hierhin schreib ich noch mehr Text ... test nutte        
         </p>
       </div>
     </div>
@@ -198,6 +198,7 @@
     <ul class="bottom_links">
       <li><a href="../legal/imprint.html">Impressum</a></li>
       <li><a href="../legal/data.html">Datenschutzerklärung</a></li>
+      <li><a href="../pages/technology.html">Technik</a></li>
     </ul>
   </footer>
 </html>
