--- a/content/pages/about.html
+++ b/content/pages/about.html
@@ -51,29 +51,81 @@
 
     <h1 class="about_h">Das ist unsere Führungsebene</h1>
 
-    <div class="card" id="erste">
-      <div class="profile-sidebar">
-        <img class="profile-image"src="https://i.pravatar.cc//125" alt="">
-        <ul class="social-list">
-          <li class="social-item">
-            <a class="social-link" href="#"></a><i class="fab fa-spotify"></i></a>
-          </li>
-          <li class="social-item">
-            <a class="social-link" href="#"><i class="fab fa-github"></i></a>
-          </li>
-          <li class="social-item">
-            <a class="social-link" href="#"><i class="fab fa-instagram"></i></a>
-          </li>
-        </ul>
+    <ul class="card-order">
+      <div class="card" id="erste-card">
+        <div class="profile-sidebar">
+          <img class="profile-image"src="https://i.pravatar.cc//125" alt="">
+          <ul class="social-list">
+            <li class="social-item">
+              <a class="social-link" href="https://github.com/SirDaywalker"><i class="fab fa-github"></i></a>
+            </li>
+            <li class="social-item">
+              <a class="social-link" href="https://open.spotify.com/user/5qhvd3ut6hvwd4diub3dayhgm?si=ad2384e1d2b94db3"><i class="fab fa-spotify"></i></a>
+            </li>
+            <li class="social-item">
+              <a class="social-link" href="https://steamcommunity.com/profiles/76561198835306171/"><i class="fab fa-steam"></i></a>
+            </li>
+          </ul>
+        </div>
+        <div class="profile-main">
+          <h2 class="profile-name">Jannis Dickel aka. Daywalker</h2>
+          <p class="profile-position">Lead Frontend Developer</p>
+          <p class="profile-body">
+          Cooler Typ und hierhin schreib ich noch mehr Text ... test nutte        
+          </p>
+        </div>
       </div>
-      <div class="profile-main">
-        <h2 class="profile-name">Jannis Dickel aka. Daywalker</h2>
-        <p class="profile-position">Lead Frontenddeveloper</p>
-        <p class="profile-body">
-        Cooler Typ und hierhin schreib ich noch mehr Text ... test nutte        
-        </p>
+
+      <div class="card" id="zweite-card">
+        <div class="profile-sidebar">
+          <img class="profile-image"src="https://i.pravatar.cc//125" alt="">
+          <ul class="social-list">
+            <li class="social-item">
+              <a class="social-link" href="#"><i class="fab fa-github"></i></a>
+            </li>
+            <li class="social-item">
+              <a class="social-link" href="#"><i class="fab fa-spotify"></i></a>
+            </li>
+            <li class="social-item">
+              <a class="social-link" href="#"><i class="fab fa-instagram"></i></a>
+            </li>
+          </ul>
+        </div>
+        <div class="profile-main">
+          <h2 class="profile-name">Julian Kirchner aka. Staubtornado</h2>
+          <p class="profile-position"> Lead Bot-Programmer & King of If- Else</p>
+          <p class="profile-body">
+          Cooler Typ und hierhin schreib ich noch mehr Text ... test nutte        
+          </p>
+        </div>
       </div>
-    </div>
+    </ul>
+
+    <ul class="card-order-2">
+      <div class="card" id="dritte-card">
+        <div class="profile-sidebar">
+          <img class="profile-image"src="https://i.pravatar.cc//125" alt="">
+          <ul class="social-list">
+            <li class="social-item">
+              <a class="social-link" href="#"><i class="fab fa-spotify"></i></a>
+            </li>
+            <li class="social-item">
+              <a class="social-link" href="#"><i class="fab fa-instagram"></i></a>
+            </li>
+            <li class="social-item">
+              <a class="social-link" href="#"><i class="fab fa-steam"></i></a>
+            </li>
+          </ul>
+        </div>
+        <div class="profile-main">
+          <h2 class="profile-name">Max Glöckner aka. Discera</h2>
+          <p class="profile-position"> Lead Box-Shadow Programmer & Media Master</p>
+          <p class="profile-body">
+          Cooler Typ und hierhin schreib ich noch mehr Text ... test nutte        
+          </p>
+        </div>
+      </div>
+    </ul>
 
     <h1 class="about_h">Ein Blick hinter die Kulissen</h1>
 
