Added links to buttons and improved projects section in general

--- a/content/pages/projects.html
+++ b/content/pages/projects.html
@@ -39,74 +39,65 @@
 
     <ul class="short_summary">
       <li>
-        <img src="/images/projects/project_1.png" alt="project_1" />
+        <img src="/images/projects/project_1.png" alt="project_1">
         <div>
           <h3>Offizielle Website</h3>
-          <p>
-            Unsere offizielle Website, welche planmäßig Anfang 2022
-            fertiggestellt wird.
-          </p>
+          <p>Unsere offizielle Website, welche planmäßig Anfang 2022 fertiggestellt wird.</p>
           <h6>Sprachen:</h6>
-          <div>HTML, CSS, JavaScript</div>
+          <div>HTML, CSS, JavaScript, SCSS</div>
           <h6>Tools:</h6>
           <div>Visual Studio Code, GitHub Pages</div>
-          <a href=""><button>View Project ></button></a>
+          <a class="viewProject" href="https://github.com/staubtornado/staubtornado.github.io">View Project</a>
         </div>
       </li>
 
       <li>
-        <img src="/images/projects/project_2.png" alt="project_2" />
+        <img src="/images/projects/project_2.png" alt="project_2">
         <div>
           <h3>Werterechner</h3>
-          <p>
-            Ein ultimativer Werterechner, welche Nullstellen, Quersummen,
-            Fakultät, BMI etc. berechnen kann.
-          </p>
+          <p>Ein ultimativer Werterechner, welcher Nullstellen, Quersummen, Fakultät, BMI etc. berechnen kann.</p>
           <h6>Sprachen:</h6>
           <div>Java</div>
           <h6>Tools:</h6>
           <div>IntelliJ IDEA</div>
-          <a href=""><button>View Project ></button></a>
+          <a class="viewProject" href="">View Project</a>
         </div>
       </li>
+
     </ul>
 
-    <ul class="short_summary">
+    <ul id="bgi_bot">
       <li>
-        <img src="/images/projects/project_3.png" alt="project_1" />
+        <img src="/images/projects/project_3.png" alt="project_1">
         <div>
-          <h3>11 BGI - Bot</h3>
-          <p>
-            Offizieller Bot für den Klassenserver auf Discord. Beinhaltet Spiele
-            wie Hangman oder TicTacToe, ein Levelsystem und Statistiken.
-          </p>
+          <h3>11 BGI Bot</h3>
+          <p>Offizieller Bot für den Klassenserver auf Discord. Beinhaltet Spiele wie Hangman oder TicTacToe, ein Levelsystem und Statistiken.</p>
           <h6>Sprachen:</h6>
           <div>Python 3.9.7</div>
           <h6>Tools:</h6>
           <div>PyCharm</div>
-          <a href="https://github.com/Staubtornado/11-BGI-Bot"
-            ><button>View Project ></button></a
-          >
-        </div>
-      </li>
-
-      <li>
-        <img src="/images/projects/project_4.png" alt="project_2" />
-        <div>
-          <h3>Musik - Bot</h3>
-          <p>
-            Ein ultimativer Musikbot, welcher Spotify- und YouTube
-            Musikstreaming auf Discord erlaubt. Höre Topsongs von Künstlern,
-            Playlists, Albums und einzelne Songs ohne Werbung direkt per Link.
-          </p>
-          <h6>Sprachen:</h6>
-          <div>Python 3.9.7</div>
-          <h6>Tools:</h6>
-          <div>PyCharm, ffmpeg</div>
-          <a href=""><button>View Project ></button></a>
+          <a class="viewProject" href="https://github.com/Staubtornado/11-BGI-Bot">View Project</a>
         </div>
       </li>
     </ul>
+    <ul id="music_bot">
+      <li>
+        <img src="/images/projects/project_4.png" alt="project_2">
+        <div>
+          <h3>Musikbot</h3>
+          <p>Ein ultimativer Musikbot, welcher Spotify- und YouTube Musikstreaming auf Discord erlaubt.
+
+            Höre Topsongs von Künstlern, Playlists, Albums und einzelne Songs ohne Werbung direkt per Link.</p>
+          <h6>Sprachen:</h6>
+          <div>Python 3.8.12</div>
+          <h6>Tools:</h6>
+          <div>PyCharm, ffmpeg</div>
+          <a class="viewProject" href="">View Project</a>
+        </div>
+      </li>
+
+    </ul>
+
   </body>
 
   <footer class="footer">
@@ -125,7 +116,6 @@
         ></a>
       </li>
       <li><a href="https://twitter.com/" class="fa fa-twitter"></a></li>
-      <!--    <li><a href="https://www.reddit.com/" class="fa fa-reddit-alien"></a></li>-->
       <li>
         <a
           href="https://open.spotify.com/playlist/4VZLJoO22qn8WWNhtZ6qra?si=71bfc55cc0ef41aa"
