--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
     <h2 >Populäre Projekte</h2>
     <a href="/content/pages/projects.html">Alle anzeigen</a>
   </div>
-  
 
   <ul class="short_summary">
     <li>
@@ -47,25 +46,25 @@
         <h3>Offizielle Website</h3>
         <p>Unsere offizielle Website, welche planmäßig Anfang 2022 fertiggestellt wird.</p>
         <h6>Sprachen:</h6>
-          <div>HTML, CSS, JavaScript, SCSS</div>
+        <div>HTML, CSS, JavaScript, SCSS</div>
         <h6>Tools:</h6>
-          <div>Visual Studio Code, GitHub Pages</div>
-        <a class="viewProject" href="test.html">View Project</a>
+        <div>Visual Studio Code, GitHub Pages</div>
+        <a class="viewProject" href="https://github.com/staubtornado/staubtornado.github.io">View Project</a>
       </div>
     </li>
-    
-      <li>
-        <img src="/images/projects/project_2.png" alt="project_2">
-        <div>
-          <h3>Werterechner</h3>
-          <p>Ein ultimativer Werterechner, welcher Nullstellen, Quersummen, Fakultät, BMI etc. berechnen kann.</p>
-          <h6>Sprachen:</h6>
-            <div>Java</div>
-          <h6>Tools:</h6>
-            <div>IntelliJ IDEA</div>
-         <a class="viewProject" href="test.html">View Project</a>
-        </div>
-      </li>
+
+    <li>
+      <img src="/images/projects/project_2.png" alt="project_2">
+      <div>
+        <h3>Werterechner</h3>
+        <p>Ein ultimativer Werterechner, welcher Nullstellen, Quersummen, Fakultät, BMI etc. berechnen kann.</p>
+        <h6>Sprachen:</h6>
+        <div>Java</div>
+        <h6>Tools:</h6>
+        <div>IntelliJ IDEA</div>
+        <a class="viewProject" href="">View Project</a>
+      </div>
+    </li>
 
   </ul>
 
@@ -76,28 +75,28 @@
         <h3>11 BGI Bot</h3>
         <p>Offizieller Bot für den Klassenserver auf Discord. Beinhaltet Spiele wie Hangman oder TicTacToe, ein Levelsystem und Statistiken.</p>
         <h6>Sprachen:</h6>
-          <div>Python 3.9.7</div>
+        <div>Python 3.9.7</div>
         <h6>Tools:</h6>
-          <div>PyCharm</div>
+        <div>PyCharm</div>
         <a class="viewProject" href="https://github.com/Staubtornado/11-BGI-Bot">View Project</a>
       </div>
     </li>
-    </ul>
-    <ul id="music_bot">
-      <li>
-        <img src="/images/projects/project_4.png" alt="project_2">
-        <div>
-          <h3>Musikbot</h3>
-          <p>Ein ultimativer Musikbot, welcher Spotify- und YouTube Musikstreaming auf Discord erlaubt.
-           
-             Höre Topsongs von Künstlern, Playlists, Albums und einzelne Songs ohne Werbung direkt per Link.</p> 
-          <h6>Sprachen:</h6>
-            <div>Python 3.9.7</div>
-          <h6>Tools:</h6>
-            <div>PyCharm, ffmpeg</div>
-          <a class="viewProject" href="test.html">View Project</a>
-        </div>
-      </li>
+  </ul>
+  <ul id="music_bot">
+    <li>
+      <img src="/images/projects/project_4.png" alt="project_2">
+      <div>
+        <h3>Musikbot</h3>
+        <p>Ein ultimativer Musikbot, welcher Spotify- und YouTube Musikstreaming auf Discord erlaubt.
+
+          Höre Topsongs von Künstlern, Playlists, Albums und einzelne Songs ohne Werbung direkt per Link.</p>
+        <h6>Sprachen:</h6>
+        <div>Python 3.8.12</div>
+        <h6>Tools:</h6>
+        <div>PyCharm, ffmpeg</div>
+        <a class="viewProject" href="">View Project</a>
+      </div>
+    </li>
 
   </ul>
   
