Added some content to one of the leader cards, code improvements

--- a/content/pages/about.html
+++ b/content/pages/about.html
@@ -54,7 +54,7 @@
     <ul class="card-order">
       <div class="card" id="erste-card">
         <div class="profile-sidebar">
-          <img class="profile-image"src="https://i.pravatar.cc//125" alt="">
+          <img class="profile-image" src="https://i.pravatar.cc//125" alt="">
           <ul class="social-list">
             <li class="social-item">
               <a class="social-link" href="https://github.com/SirDaywalker"><i class="fab fa-github"></i></a>
@@ -78,24 +78,24 @@
 
       <div class="card" id="zweite-card">
         <div class="profile-sidebar">
-          <img class="profile-image"src="https://i.pravatar.cc//125" alt="">
+          <img class="profile-image" src="../../images/about/profiles/jk.jpg" alt="">
           <ul class="social-list">
             <li class="social-item">
-              <a class="social-link" href="#"><i class="fab fa-github"></i></a>
+              <a class="social-link" href="https://github.com/staubtornado"><i class="fab fa-github"></i></a>
             </li>
             <li class="social-item">
-              <a class="social-link" href="#"><i class="fab fa-spotify"></i></a>
+              <a class="social-link" href="https://open.spotify.com/user/j9olg2rgmgsf2u9oeq4dlakct?si=2bddca9bf64a4e41"><i class="fab fa-spotify"></i></a>
             </li>
             <li class="social-item">
-              <a class="social-link" href="#"><i class="fab fa-instagram"></i></a>
+              <a class="social-link" href="https://www.instagram.com/realkirchner/"><i class="fab fa-instagram"></i></a>
             </li>
           </ul>
         </div>
         <div class="profile-main">
           <h2 class="profile-name">Julian Kirchner aka. Staubtornado</h2>
-          <p class="profile-position"> Lead Bot-Programmer & King of If- Else</p>
+          <p class="profile-position">Product Developer</p>
           <p class="profile-body">
-          Cooler Typ und hierhin schreib ich noch mehr Text ... test nutte        
+            Cooler Typ und hierhin schreib ich noch mehr Text ... test nutte
           </p>
         </div>
       </div>
@@ -104,7 +104,7 @@
     <ul class="card-order-2">
       <div class="card" id="dritte-card">
         <div class="profile-sidebar">
-          <img class="profile-image"src="https://i.pravatar.cc//125" alt="">
+          <img class="profile-image" src="https://i.pravatar.cc//125" alt="">
           <ul class="social-list">
             <li class="social-item">
               <a class="social-link" href="#"><i class="fab fa-spotify"></i></a>
@@ -130,7 +130,6 @@
     <h1 class="about_h">Ein Blick hinter die Kulissen</h1>
 
     <!--image slider start-->
-    <link rel="stylesheet" href="../../sliders.css" />
     <div class="slider_body">
       <div class="slider">
         <div class="slides">
@@ -238,7 +237,6 @@
         ></a>
       </li>
       <li><a href="https://twitter.com/" class="fa fa-twitter"></a></li>
-      <!--    <li><a href="https://www.reddit.com/" class="fa fa-reddit-alien"></a></li>-->
       <li>
         <a
           href="https://open.spotify.com/playlist/4VZLJoO22qn8WWNhtZ6qra?si=71bfc55cc0ef41aa"
@@ -250,7 +248,6 @@
     <ul class="bottom_links">
       <li><a href="../legal/imprint.html">Impressum</a></li>
       <li><a href="../legal/data.html">Datenschutzerklärung</a></li>
-      <li><a href="../pages/technology.html">Technik</a></li>
     </ul>
   </footer>
 </html>
