Fixed all syntax errors on about.html

--- a/content/pages/about.html
+++ b/content/pages/about.html
@@ -1,13 +1,10 @@
 <html lang="de">
 
   <head>
-    <meta
-      charset="UTF-8"
-      name="viewport"
-      content="width=device-width, initial-scale=1.0"
-      name="description"
-      content="Offizielle Website von Kotmasters"
-    />
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="description" content="Offizielle Website von Kotmasters"/>
+
     <title>About | Kotmasters</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
@@ -52,7 +49,7 @@
     <h1 class="about_h">Das ist unsere Führungsebene</h1>
 
     <ul class="card-order">
-      <div class="card" id="erste-card">
+      <li class="card" id="erste-card">
         <div class="profile-sidebar">
           <img class="profile-image" src="https://i.pravatar.cc//125" alt="">
           <ul class="social-list">
@@ -74,9 +71,9 @@
           Cooler Typ und hierhin schreib ich noch mehr Text ... test nutte        
           </p>
         </div>
-      </div>
+      </li>
 
-      <div class="card" id="zweite-card">
+      <li class="card" id="zweite-card">
         <div class="profile-sidebar">
           <img class="profile-image" src="../../images/about/profiles/jk.jpg" alt="">
           <ul class="social-list">
@@ -98,11 +95,11 @@
             Cooler Typ und hierhin schreib ich noch mehr Text ... test nutte
           </p>
         </div>
-      </div>
+      </li>
     </ul>
 
     <ul class="card-order-2">
-      <div class="card" id="dritte-card">
+      <li class="card" id="dritte-card">
         <div class="profile-sidebar">
           <img class="profile-image" src="https://i.pravatar.cc//125" alt="">
           <ul class="social-list">
@@ -124,7 +121,7 @@
           Cooler Typ und hierhin schreib ich noch mehr Text ... test nutte        
           </p>
         </div>
-      </div>
+      </li>
     </ul>
 
     <h1 class="about_h">Ein Blick hinter die Kulissen</h1>
