--- a/content/pages/contact.html
+++ b/content/pages/contact.html
@@ -1,13 +1,9 @@
 <html lang="de">
 
   <head>
-    <meta
-      charset="UTF-8"
-      name="viewport"
-      content="width=device-width, initial-scale=1.0"
-      name="description"
-      content="Offizielle Website von Kotmasters"
-    />
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="description" content="Offizielle Website von Kotmasters"/>
 
     <title>Contact | Kotmasters</title>
 
@@ -43,7 +39,7 @@
 
     <form action="">
       <fieldset>
-        <div id=x onclick="javascript:eraseText();"><i class="fas fa-times-circle"></i></div>
+        <div id=x onclick="eraseText();"><i class="fas fa-times-circle"></i></div>
         <input required name="name" type="text" size="30" placeholder="Name:" />
         <br />
         <input
@@ -121,7 +117,6 @@
         ></a>
       </li>
       <li><a href="https://twitter.com/" class="fa fa-twitter"></a></li>
-      <!--<li><a href="https://www.reddit.com/" class="fa fa-reddit-alien"></a></li>-->
       <li>
         <a
           href="https://open.spotify.com/playlist/4VZLJoO22qn8WWNhtZ6qra?si=71bfc55cc0ef41aa"
