--- a/content/pages/projects.html
+++ b/content/pages/projects.html
@@ -1,13 +1,9 @@
 <html lang="de">
 
   <head>
-    <meta
-      charset="UTF-8"
-      name="viewport"
-      content="width=device-width, initial-scale=1.0"
-      name="description"
-      content="Offizielle Website von Kotmasters"
-    />
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <meta name="description" content="Offizielle Website von Kotmasters"/>
 
     <title>Projects | Kotmasters</title>
 
