--- a/content/pages/about.html
+++ b/content/pages/about.html
@@ -98,19 +98,19 @@
       </li>
     </ul>
 
-    <ul class="card-order-2">
+     <ul class="card-order-2">
       <li class="card" id="dritte-card">
         <div class="profile-sidebar">
           <img class="profile-image" src="https://i.pravatar.cc//125" alt="">
           <ul class="social-list">
             <li class="social-item">
-              <a class="social-link" href="#"><i class="fab fa-spotify"></i></a>
+              <a class="social-link" href="https://open.spotify.com/user/mznxlj7w7vzm6ht15yex781ib?si=bf855c66978b4c0f"><i class="fab fa-spotify"></i></a>
             </li>
             <li class="social-item">
-              <a class="social-link" href="#"><i class="fab fa-instagram"></i></a>
+              <a class="social-link" href="https://www.instagram.com/max.glcknr/"><i class="fab fa-instagram"></i></a>
             </li>
             <li class="social-item">
-              <a class="social-link" href="#"><i class="fab fa-steam"></i></a>
+              <a class="social-link" href="https://steamcommunity.com/id/Discera/"><i class="fab fa-steam"></i></a>
             </li>
           </ul>
         </div>
