description of managements cards is now centered and some fill text has been replaced

--- a/content/pages/about.html
+++ b/content/pages/about.html
@@ -64,7 +64,7 @@
           </ul>
         </div>
         <div class="profile-main">
-          <h2 class="profile-name">Jannis Dickel aka. Daywalker</h2>
+          <h2 class="profile-name">Jannis Dickel</h2>
           <p class="profile-position">Lead Frontend Developer</p>
           <p class="profile-body">
           Cooler Typ und hierhin schreib ich noch mehr Text ... test nutte        
@@ -88,11 +88,11 @@
           </ul>
         </div>
         <div class="profile-main">
-          <h2 class="profile-name">Julian Kirchner aka. Staubtornado</h2>
+          <h2 class="profile-name">Julian Kirchner</h2>
           <p class="profile-position">Product Developer</p>
           <p class="profile-body">
-            Cooler Typ und hierhin schreib ich noch mehr Text ... test nutte
-          </p>
+            Seit Januar 2021 Entwickler von Discord Bots mithilfe der Discord API und Py-Cord in
+            Python 3.8 - 3.10. Grundkenntnisse in Java 8, JavaScript, C++, HTML & CSS. Lieblings Spiel Cyberpunk 2077</p>
         </div>
       </li>
     </ul>
@@ -114,8 +114,8 @@
           </ul>
         </div>
         <div class="profile-main">
-          <h2 class="profile-name">Max Glöckner aka. Discera</h2>
-          <p class="profile-position"> Lead Box-Shadow Programmer & Media Master</p>
+          <h2 class="profile-name">Max Glöckner</h2>
+          <p class="profile-position"> Web Designer</p>
           <p class="profile-body">
           Cooler Typ und hierhin schreib ich noch mehr Text ... test nutte        
           </p>
