fixed buggy social media icons

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   
   <title>Kotmasters</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <link rel="shortcut icon" href="/images/icon.ico" />
 
     <meta
@@ -104,12 +104,10 @@
 
 <footer class="footer">
   <ul class="fa">
-    <li><a href="https://www.instagram.com/kotmasters.official/" class="fa fa-instagram"></a></li>
-    <li><a href="https://www.facebook.com/" class="fa fa-facebook"></a></li>
-    <li><a href="https://github.com/Staubtornado/kotmasters" class="fa fa-github"></a></li>
-    <li><a href="https://twitter.com/" class="fa fa-twitter"></a></li>
-    <li><a href="https://open.spotify.com/playlist/4VZLJoO22qn8WWNhtZ6qra?si=71bfc55cc0ef41aa" class="fa fa-spotify"></a></li>
-</ul>  
+    <li><a href="https://www.instagram.com/kotmasters.official/" class="fab fa-instagram"></a></li>
+    <li><a href="https://github.com/Staubtornado/kotmasters" class="fab fa-github"></a></li>
+    <li><a href="https://open.spotify.com/playlist/4VZLJoO22qn8WWNhtZ6qra?si=71bfc55cc0ef41aa" class="fab fa-spotify"></a></li>
+  </ul>  
 
   <ul class="bottom_links">
       <li><a href="content/legal/imprint.html">Impressum</a></li>
