--- a/content/pages/about.html
+++ b/content/pages/about.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="description" content="Offizielle Website von Kotmasters"/>
 
-    <title>About | Kotmasters</title>
+    <title>Über uns | Kotmasters</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="shortcut icon" href="/images/icon.ico" />
     <link rel="stylesheet" href="../../styles/css/about.css" />
@@ -14,9 +14,9 @@
     <a class="logo__font" href="/"><img class="logo" src="/images/logo.png" alt="logo" />Kotmasters</a>
     <nav>
       <ul class="nav__links">
-        <li><a href="">Services</a></li>
-        <li><a href="/content/pages/about.html">About</a></li>
-        <li><a href="/content/pages/projects.html">Projects</a></li>
+        <li><a href="../../content/pages/about.html">Über uns</a></li>
+        <li><a href="https://github.com/Staubtornado/kotmasters/discussions">Blog</a></li>
+        <li><a href="../../content/pages/projects.html">Projekte</a></li>
       </ul>
     </nav>
     <a class="cta" href="https://github.com/Staubtornado/kotmasters/discussions"><button>Contact</button></a>
