--- a/content/pages/projects.html
+++ b/content/pages/projects.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta name="description" content="Offizielle Website von Kotmasters"/>
 
-    <title>Projects | Kotmasters</title>
+    <title>Projekte | Kotmasters</title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="shortcut icon" href="../../images/icon.ico" />
@@ -18,9 +18,9 @@
     >
     <nav>
       <ul class="nav__links">
-        <li><a href="">Services</a></li>
-        <li><a href="../../content/pages/about.html">About</a></li>
-        <li><a href="../../content/pages/projects.html">Projects</a></li>
+        <li><a href="../../content/pages/about.html">Über uns</a></li>
+        <li><a href="https://github.com/Staubtornado/kotmasters/discussions">Blog</a></li>
+        <li><a href="../../content/pages/projects.html">Projekte</a></li>
       </ul>
     </nav>
     <a class="cta" href="https://github.com/Staubtornado/kotmasters/discussions"
