--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <li><a href="../../content/pages/projects.html">Projekte</a></li>
     </ul>
   </nav>
-  <a class="cta" href="https://github.com/Staubtornado/kotmasters/discussions"><button>Kontakt</button></a>
+  <a class="cta" href="../../content/pages/contact.html"><button>Kontakt</button></a>
 </header>
    
 <body>
