--- a/content/pages/about.html
+++ b/content/pages/about.html
@@ -217,7 +217,7 @@
   </body>
 
   <footer class="footer">
-    <ul class="fa">
+    <ul class="fab">
       <li>
         <a href="https://www.instagram.com/kotmasters.official/" class="fab fa-instagram"></a>
       </li>
