--- a/content/pages/projects.html
+++ b/content/pages/projects.html
@@ -95,7 +95,7 @@
   </body>
 
   <footer class="footer">
-    <ul class="fa">
+    <ul class="fab">
       <li>
         <a href="https://www.instagram.com/kotmasters.official/" class="fab fa-instagram"></a>
       </li>
