--- a/content/pages/about.html
+++ b/content/pages/about.html
@@ -49,7 +49,7 @@
     <ul class="card-order">
       <li class="card" id="erste-card">
         <div class="profile-sidebar">
-          <img class="profile-image" src="https://i.pravatar.cc//125" alt="">
+          <img class="profile-image" src="../../images/about/profiles/jd.jpg" alt="">
           <ul class="social-list">
             <li class="social-item">
               <a class="social-link" href="https://github.com/SirDaywalker"><i class="fab fa-github"></i></a>
@@ -66,7 +66,10 @@
           <h2 class="profile-name">Jannis Dickel</h2>
           <p class="profile-position">Lead Frontend Developer</p>
           <p class="profile-body">
-          Cooler Typ und hierhin schreib ich noch mehr Text ... test nutte        
+            Seit Juni 2021 programmiere ich in meiner Freizeit an kleinere Pythonprojekte. Seit September 2021 lerne ich Java und habe meine Fertigkeiten in html 5, css und scss mainifestiert. 
+            Lieblingsspiel Fallout 4  (zu erkennen im Avatar) und Witcher 3 Wild Hunt.
+            Im Internet findet mich unter dem Namen Daywalker, welcher ein Vampir ist, der aber am Tag nicht versteinert.
+
           </p>
         </div>
       </li>
