--- a/content/pages/about.html
+++ b/content/pages/about.html
@@ -51,23 +51,26 @@
         <div class="profile-sidebar">
           <img class="profile-image" src="../../images/about/profiles/jd.jpg" alt="">
           <ul class="social-list">
-            <li class="social-item">
-              <a class="social-link" href="https://github.com/SirDaywalker"><i class="fab fa-github"></i></a>
-            </li>
-            <li class="social-item">
-              <a class="social-link" href="https://open.spotify.com/user/5qhvd3ut6hvwd4diub3dayhgm?si=ad2384e1d2b94db3"><i class="fab fa-spotify"></i></a>
-            </li>
-            <li class="social-item">
-              <a class="social-link" href="https://steamcommunity.com/profiles/76561198835306171/"><i class="fab fa-steam"></i></a>
-            </li>
+            <li class="list_items"><a href=""><img src="../../images/social_media/github.png" alt=""></a></li>
+            <li><a href=""><img src="../../images/social_media/spotify.png" alt=""></a></li>
+            <li><a href=""><img src="../../images/social_media/steam.png" alt=""></a></li>
+<!--            <li class="social-item">-->
+<!--              <a class="social-link" href="https://github.com/SirDaywalker"><i class="fab fa-github"></i></a>-->
+<!--            </li>-->
+<!--            <li class="social-item">-->
+<!--              <a class="social-link" href="https://open.spotify.com/user/5qhvd3ut6hvwd4diub3dayhgm?si=ad2384e1d2b94db3"><i class="fab fa-spotify"></i></a>-->
+<!--            </li>-->
+<!--            <li class="social-item">-->
+<!--              <a class="social-link" href="https://steamcommunity.com/profiles/76561198835306171/"><i class="fab fa-steam"></i></a>-->
+<!--            </li>-->
           </ul>
         </div>
         <div class="profile-main">
           <h2 class="profile-name">Jannis Dickel</h2>
           <p class="profile-position">Lead Frontend Developer</p>
           <p class="profile-body">
-            Seit Juni 2021 programmiere ich in meiner Freizeit an kleinere Pythonprojekte. Seit September 2021 lerne ich Java und habe meine Fertigkeiten in html 5, css und scss mainifestiert. 
-            Lieblingsspiel Fallout 4  (zu erkennen im Avatar) und Witcher 3 Wild Hunt.
+            Seit Juni 2021 programmiere ich in meiner Freizeit an kleinere Pythonprojekte. Seit September 2021 lerne ich Java und habe meine Fertigkeiten in html 5, css und scss manifestiert.
+            Lieblingsspiel Fallout 4 (zu erkennen im Avatar) und Witcher 3 Wild Hunt.
             Im Internet findet mich unter dem Namen Daywalker, welcher ein Vampir ist, der aber am Tag nicht versteinert.
 
           </p>
