--- a/content/pages/about.html
+++ b/content/pages/about.html
@@ -51,18 +51,9 @@
         <div class="profile-sidebar">
           <img class="profile-image" src="../../images/about/profiles/jd.jpg" alt="">
           <ul class="social-list">
-            <li class="list_items"><a href=""><img src="../../images/social_media/github.png" alt=""></a></li>
-            <li><a href=""><img src="../../images/social_media/spotify.png" alt=""></a></li>
-            <li><a href=""><img src="../../images/social_media/steam.png" alt=""></a></li>
-<!--            <li class="social-item">-->
-<!--              <a class="social-link" href="https://github.com/SirDaywalker"><i class="fab fa-github"></i></a>-->
-<!--            </li>-->
-<!--            <li class="social-item">-->
-<!--              <a class="social-link" href="https://open.spotify.com/user/5qhvd3ut6hvwd4diub3dayhgm?si=ad2384e1d2b94db3"><i class="fab fa-spotify"></i></a>-->
-<!--            </li>-->
-<!--            <li class="social-item">-->
-<!--              <a class="social-link" href="https://steamcommunity.com/profiles/76561198835306171/"><i class="fab fa-steam"></i></a>-->
-<!--            </li>-->
+            <li class="list_items"><a href="https://github.com/SirDaywalker"><img src="../../images/social_media/github.png" alt=""></a></li>
+            <li class="list_items"><a href="https://open.spotify.com/user/5qhvd3ut6hvwd4diub3dayhgm?si=ad2384e1d2b94db3"><img src="../../images/social_media/spotify.png" alt=""></a></li>
+            <li class="list_items"><a href="https://steamcommunity.com/profiles/76561198835306171/"><img src="../../images/social_media/steam.png" alt=""></a></li>
           </ul>
         </div>
         <div class="profile-main">
