fixed & centered the whole shitty links on about

--- a/content/pages/about.html
+++ b/content/pages/about.html
@@ -50,11 +50,13 @@
       <li class="card" id="erste-card">
         <div class="profile-sidebar">
           <img class="profile-image" src="../../images/about/profiles/jd.jpg" alt="">
-          <ul class="social-list">
-            <li class="list_items"><a href="https://github.com/SirDaywalker"><img src="../../images/social_media/github.png" alt=""></a></li>
-            <li class="list_items"><a href="https://open.spotify.com/user/5qhvd3ut6hvwd4diub3dayhgm?si=ad2384e1d2b94db3"><img src="../../images/social_media/spotify.png" alt=""></a></li>
-            <li class="list_items"><a href="https://steamcommunity.com/profiles/76561198835306171/"><img src="../../images/social_media/steam.png" alt=""></a></li>
-          </ul>
+          <div class="order-test">
+            <ul class="social-list">
+              <li class="list_items"><a href="https://github.com/SirDaywalker"><i class="fab fa-github"></i></li>
+              <li class="list_items"><a href="https://open.spotify.com/user/5qhvd3ut6hvwd4diub3dayhgm?si=ad2384e1d2b94db3"><i class="fab fa-spotify"></i></a></li>
+              <li class="list_items"><a href="https://steamcommunity.com/profiles/76561198835306171/"> <i class="fab fa-steam"></i></a></li>
+            </ul>
+          </div>
         </div>
         <div class="profile-main">
           <h2 class="profile-name">Jannis Dickel</h2>
@@ -63,55 +65,47 @@
             Seit Juni 2021 programmiere ich in meiner Freizeit an kleinere Pythonprojekte. Seit September 2021 lerne ich Java und habe meine Fertigkeiten in html 5, css und scss manifestiert.
             Lieblingsspiel Fallout 4 (zu erkennen im Avatar) und Witcher 3 Wild Hunt.
             Im Internet findet mich unter dem Namen Daywalker, welcher ein Vampir ist, der aber am Tag nicht versteinert.
-
           </p>
         </div>
       </li>
-
-      <li class="card" id="zweite-card">
-        <div class="profile-sidebar">
-          <img class="profile-image" src="../../images/about/profiles/jk.jpg" alt="">
-          <ul class="social-list">
-            <li class="social-item">
-              <a class="social-link" href="https://github.com/staubtornado"><i class="fab fa-github"></i></a>
-            </li>
-            <li class="social-item">
-              <a class="social-link" href="https://open.spotify.com/user/j9olg2rgmgsf2u9oeq4dlakct?si=2bddca9bf64a4e41"><i class="fab fa-spotify"></i></a>
-            </li>
-            <li class="social-item">
-              <a class="social-link" href="https://www.instagram.com/realkirchner/"><i class="fab fa-instagram"></i></a>
-            </li>
-          </ul>
-        </div>
-        <div class="profile-main">
-          <h2 class="profile-name">Julian Kirchner</h2>
-          <p class="profile-position">Product Developer</p>
-          <p class="profile-body">
-            Seit Januar 2021 Entwickler von Discord Bots mithilfe der Discord API und Py-Cord in
-            Python 3.8 - 3.10. Grundkenntnisse in Java 8, JavaScript, C++, HTML & CSS. Lieblings Spiel Cyberpunk 2077</p>
-        </div>
-      </li>
+      
+        <li class="card" id="zweite-card">
+          <div class="profile-sidebar">
+            <img class="profile-image" src="../../images/about/profiles/jk.jpg" alt="">
+            <div class="order-test">
+              <ul class="social-list">
+                <li class="list_items"><a href="https://github.com/staubtornado"><i class="fab fa-github"></i></li>
+                <li class="list_items"><a href=" https://open.spotify.com/user/j9olg2rgmgsf2u9oeq4dlakct?si=2bddca9bf64a4e41"><i class="fab fa-spotify"></i></a></li>
+                <li class="list_items"><a href="https://www.instagram.com/realkirchner/"> <i class="fab fa-instagram"></i></a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="profile-main">
+            <h2 class="profile-name">Julian Kirchner</h2>
+            <p class="profile-position">Product Developer</p>
+            <p class="profile-body">
+              Seit Januar 2021 Entwickler von Discord Bots mithilfe der Discord API und Py-Cord in Python 3.8 - 3.10.
+               Grundkenntnisse in Java 8, JavaScript, C++, HTML & CSS. Lieblings Spiel Cyberpunk 2077
+            </p>
+          </div>
+        </li>
     </ul>
 
      <ul class="card-order-2">
       <li class="card" id="dritte-card">
         <div class="profile-sidebar">
           <img class="profile-image" src="https://i.pravatar.cc//125" alt="">
-          <ul class="social-list">
-            <li class="social-item">
-              <a class="social-link" href="https://open.spotify.com/user/mznxlj7w7vzm6ht15yex781ib?si=bf855c66978b4c0f"><i class="fab fa-spotify"></i></a>
-            </li>
-            <li class="social-item">
-              <a class="social-link" href="https://www.instagram.com/max.glcknr/"><i class="fab fa-instagram"></i></a>
-            </li>
-            <li class="social-item">
-              <a class="social-link" href="https://steamcommunity.com/id/Discera/"><i class="fab fa-steam"></i></a>
-            </li>
-          </ul>
+          <div class="order-test">
+            <ul class="social-list">
+              <li class="list_items"><a href="https://steamcommunity.com/id/Discera/"><i class="fab fa-steam"></i></li>
+              <li class="list_items"><a href="https://open.spotify.com/user/mznxlj7w7vzm6ht15yex781ib?si=bf855c66978b4c0f"><i class="fab fa-spotify"></i></a></li>
+              <li class="list_items"><a href="https://www.instagram.com/max.glcknr/"> <i class="fab fa-instagram"></i></a></li>
+            </ul>
+          </div>
         </div>
         <div class="profile-main">
           <h2 class="profile-name">Max Glöckner</h2>
-          <p class="profile-position"> Web Designer</p>
+          <p class="profile-position">Web Designer</p>
           <p class="profile-body">
           Cooler Typ und hierhin schreib ich noch mehr Text ... test nutte        
           </p>
@@ -202,7 +196,6 @@
     <!-- script for autoplay end-->
     <!--image slider end-->
 
-    <h1 class="about_h">Unser Büro</h1>
 
     <h1 class="about_h">
       Unser Tochterunternehmen <em> "Kotmasters-Gaming"</em>
