same height of the upper two cards

--- a/content/pages/about.html
+++ b/content/pages/about.html
@@ -85,7 +85,7 @@
             <p class="profile-position">Product Developer</p>
             <p class="profile-body">
               Seit Januar 2021 Entwickler von Discord Bots mithilfe der Discord API und Py-Cord in Python 3.8 - 3.10.
-               Grundkenntnisse in Java 8, JavaScript, C++, HTML & CSS. Lieblings Spiel Cyberpunk 2077
+               Grundkenntnisse in Java 8, JavaScript, C++, HTML & CSS. Lieblings Spiel Cyberpunk 2077 <br><br>
             </p>
           </div>
         </li>
