fixed every media icons on every page

--- a/content/pages/contact.html
+++ b/content/pages/contact.html
@@ -84,7 +84,7 @@
 
     </form>
 
-    <button type="submit" class="button">Send</button> 
+    <button type="submit" class="button">Senden</button> 
     <div class="loader">
       <div class="check">
         <span class="check-one"></span>
