--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 </body>    
 
 <footer class="footer">
-  <ul class="fa">
+  <ul class="fab">
     <li><a href="https://www.instagram.com/kotmasters.official/" class="fab fa-instagram"></a></li>
     <li><a href="https://github.com/Staubtornado/kotmasters" class="fab fa-github"></a></li>
     <li><a href="https://open.spotify.com/playlist/4VZLJoO22qn8WWNhtZ6qra?si=71bfc55cc0ef41aa" class="fab fa-spotify"></a></li>
