--- a/content/pages/projects.html
+++ b/content/pages/projects.html
@@ -9,7 +9,7 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="shortcut icon" href="../../images/icon.ico" />
-    <link rel="stylesheet" href="../../styles/css/projects.css" />
+    <link rel="stylesheet" href="../../styles/css/projects-page.css" />
   </head>
 
   <header>
