Added missing links to buttons

--- a/content/pages/about.html
+++ b/content/pages/about.html
@@ -197,13 +197,13 @@
     <!--image slider end-->
 
 
-    <h1 class="about_h">
-      Unser Tochterunternehmen <em> "Kotmasters-Gaming"</em>
-    </h1>
-    <p class="vorstellung">
-      Interessiert in <em>Kot-Gaming</em>?. <br />
-      Dann schau bei unseren Freunden auf <a href="#"></a>
-    </p>
+<!--    <h1 class="about_h">-->
+<!--      Unser Tochterunternehmen <em> "Kotmasters-Gaming"</em>-->
+<!--    </h1>-->
+<!--    <p class="vorstellung">-->
+<!--      Interessiert in <em>Kot-Gaming</em>?. <br />-->
+<!--      Dann schau bei unseren Freunden auf <a href="#"></a>-->
+<!--    </p>-->
   </body>
 
   <footer class="footer">
