--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
   <a class="logo__font" href="/"><img class="logo" src="/images/logo.png" alt="logo">Kotmasters</a>
   <nav>
     <ul class="nav__links">
-      <li><a href="../../content/pages/about.html">Über uns</a></li>
+      <li><a href="./content/pages/about.html">Über uns</a></li>
       <li><a href="https://github.com/Staubtornado/kotmasters/discussions">Blog</a></li>
-      <li><a href="../../content/pages/projects.html">Projekte</a></li>
+      <li><a href="./content/pages/projects.html">Projekte</a></li>
     </ul>
   </nav>
-  <a class="cta" href="../../content/pages/contact.html"><button>Kontakt</button></a>
+  <a class="cta" href="./content/pages/contact.html"><button>Kontakt</button></a>
 </header>
    
 <body>
@@ -62,7 +62,7 @@
         <div>Java</div>
         <h6>Tools:</h6>
         <div>IntelliJ IDEA</div>
-        <a class="viewProject" href="">View Project</a>
+        <a class="viewProject" href="https://github.com/staubtornado/praktische-informatik">View Project</a>
       </div>
     </li>
 
@@ -94,7 +94,7 @@
         <div>Python 3.8.12</div>
         <h6>Tools:</h6>
         <div>PyCharm, ffmpeg</div>
-        <a class="viewProject" href="">View Project</a>
+        <a class="viewProject" href="https://github.com/staubtornado/juliandc/blob/main/cogs/music.py">View Project</a>
       </div>
     </li>
 
