--- a/content/legal/data.html
+++ b/content/legal/data.html
@@ -18,12 +18,12 @@
     <a class="logo__font" href="/"><img class="logo" src="../../images/logo.png" alt="logo">Kotmasters</a>
     <nav>
       <ul class="nav__links">
-        <li><a href="">Services</a></li>
-        <li><a href="../../content/pages/about.html">About</a></li>
-        <li><a href="../../content/pages/projects.html">Projects</a></li>
+        <li><a href="../../content/pages/about.html">Über uns</a></li>
+        <li><a href="https://github.com/Staubtornado/kotmasters/discussions">Blog</a></li>
+        <li><a href="../../content/pages/projects.html">Projekte</a></li>
       </ul>
     </nav>
-    <a class="cta" href="https://github.com/Staubtornado/kotmasters/discussions"><button>Contact</button></a>
+    <a class="cta" href="../../content/pages/contact.html"><button>Kontakt</button></a>
 </header>
 
 <body>
