--- a/content/pages/about.html
+++ b/content/pages/about.html
@@ -107,7 +107,9 @@
           <h2 class="profile-name">Max Glöckner</h2>
           <p class="profile-position">Web Designer</p>
           <p class="profile-body">
-          Cooler Typ und hierhin schreib ich noch mehr Text ... test nutte        
+          Schon seit einiger Zeit interessiere ich mich für Hard- und Software und habe hauptsächlich Kenntnisse in Java, CSS und HTML. 
+          Außerdem spiele ich auch gerne Videospiele wie zum Beispiel Counter-Strike. Momentan fange ich mit dem Programmieren von
+           Arduinos an. Mein erstes größeres Projekt wird hier ein Luftqualitätsmessgerät sein.
           </p>
         </div>
       </li>
