Add Max image v2

--- a/content/pages/about.html
+++ b/content/pages/about.html
@@ -94,7 +94,7 @@
      <ul class="card-order-2">
       <li class="card" id="dritte-card">
         <div class="profile-sidebar">
-          <img class="profile-image" src="https://i.pravatar.cc//125" alt="">
+          <img class="profile-image" src="../../images/about/profiles/me5.jpg" alt="">
           <div class="order-test">
             <ul class="social-list">
               <li class="list_items"><a href="https://steamcommunity.com/id/Discera/"><i class="fab fa-steam"></i></li>
