changeg my profile pic

--- a/content/pages/about.html
+++ b/content/pages/about.html
@@ -63,7 +63,7 @@
           <p class="profile-position">Lead Frontend Developer</p>
           <p class="profile-body">
             Seit Juni 2021 programmiere ich in meiner Freizeit an kleinere Pythonprojekte. Seit September 2021 lerne ich Java und habe meine Fertigkeiten in html 5, css und scss manifestiert.
-            Lieblingsspiel Fallout 4 (zu erkennen im Avatar) und Witcher 3 Wild Hunt.
+            Lieblingsspiel Fallout 4 und Witcher 3 Wild Hunt.
             Im Internet findet mich unter dem Namen Daywalker, welcher ein Vampir ist, der aber am Tag nicht versteinert.
           </p>
         </div>
